--- a/Applicatie/BoodschApp/BoodschApp/BoodschApp.csproj
+++ b/Applicatie/BoodschApp/BoodschApp/BoodschApp.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Classes\Product.cs" />
     <Compile Include="Classes\Winkel.cs" />
     <Compile Include="Database\DatabaseManager.cs" />
+    <Compile Include="Exceptions\BoodschapException.cs" />
     <Compile Include="GUI\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
