--- a/Applicatie/BoodschApp/BoodschApp/BoodschApp.csproj
+++ b/Applicatie/BoodschApp/BoodschApp/BoodschApp.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Classes\Ingredrient.cs" />
     <Compile Include="Classes\Product.cs" />
     <Compile Include="Classes\Winkel.cs" />
+    <Compile Include="Classes\WinkelOrde.cs" />
     <Compile Include="Database\DatabaseManager.cs" />
     <Compile Include="Exceptions\BoodschapException.cs" />
     <Compile Include="GUI\Form1.cs">
